# stampede

./: .gitignore  README.md  pyproject.toml  requirements.yaml
.github/workflows/: ci-cd.yaml  docs.yml
data/: blacklist_pbmc_6k.txt  core_immune_genes_6k.txt  sample2fov.csv
docs/: citation.rst  conf.py  index.rst  installation.rst  requirements.txt
stampede/: __init__.py  _dim_red.py  _filter.py  _process.py  _qc.py  _read.py  pl.py  pp.py
stampede/_tools/: pydeseq2.py  statsmodels.py
tests/: test_02_basics.py
